# stampy-nlp

./: .gitignore  Dockerfile  README.md  deploy.sh  deploy_model.sh  docker-compose.yml  encode-faq-titles.sh  pyproject.toml  run.sh  setup.sh
.github/workflows/: encode-faq-js.yml  encode-faq-py.yml  pytest.yml
api/: .dockerignore  Dockerfile  Procfile  deploy.sh  faq_titles.py  main.py  requirements.txt  service.yaml
api/templates/: duplicates.html  extract.html  literature.html
api/utilities/: huggingface_utils.py
data/: clean_alignment_texts.py  encode-extracted-chunks.py  encode-lit-abstracts.py  hypothetical_questions.py  requirements.txt  secrets.sh  setup.sh
data/.ipynb_checkpoints/: stampy-chat-ard-checkpoint.ipynb
encode-faq-js/: encode-faq.mjs  package-lock.json  package.json  secrets.sh
encode-faq-py/: encode-extracted-chunks.py  encode-faq-titles-main.py  encode-faq-titles.py  encode-faq-titles.sh
images/: stampy-nlp.ai
model_server/: Dockerfile  README.md  pyproject.toml
model_server/src/model_server/: app.py  consts.py  handler.py  settings.py
model_server/src/model_server/model_types/: __init__.py  base_model.py  encoder.py  pipeline.py
src/stampy_nlp/: faq_titles.py  faq_titles_local.py  logger.py  main.py  models.py  routes.py  search.py  settings.py
src/stampy_nlp/templates/: search.html  template.html
src/stampy_nlp/utilities/: coda_utils.py  huggingface_utils.py  openai_utils.py  pinecone_utils.py
tests/: conftest.py  test_api_routes.py  test_encode_titles.py
tests/data/: coda.json  duplicates.py
tests/data/pinecone/: Find me some data+extracted-chunks+None+10.json  Find me some data+faq-titles+{'status': 'Live on site'}+5.json  Find me some data+faq-titles+{'status': {'$in': ['In review']}}+1.json  Find me some data+faq-titles+{'status': {'$ne': 'Live on site'}}+1.json  Find me some data+faq-titles+{'status': {'$ne': 'Live on site'}}+2.json  Find me some data+faq-titles+{'status': {'$ne': 'Live on site'}}+5.json  Find me some data+faq-titles+{'status'X 'Live on site'}+1.json  Find me some data+faq-titles+{'status'X 'Live on site'}+10.json  Find me some data+faq-titles+{'status'X 'Live on site'}+2.json  Find me some data+faq-titles+{'status'X {'$in'X ['In progress', 'In review']}}+10.json  Find me some data+faq-titles+{'status'X {'$in'X ['In progress', 'In review']}}+2.json  Find me some data+faq-titles+{'status'X {'$in'X ['In progress', 'In review']}}+5.json  (+33 more)
tests/routes/: test_api_chat.py  test_api_extract.py  test_api_literature.py  test_api_search.py
(+16 files in other folders)
